--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-=<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <style>
@@ -9,6 +9,6 @@
 
 </head>
 <body>
-    
+   GREEN! 
 </body>
 </html>
